# py-ft4222-spi

./: LICENSE  README.md  pyproject.toml
src/py_ft4222_spi/: __init__.py  ft4222_device.py  ft4222_types.py
tests/: test_device.py  test_spi_master.py
