[project]
name = "py-ft4222-spi"
version = "0.1.0"
description = "A python driver for FT4222 using SPI"
authors = [
    {name = "CQ Zha",email = "cqzha_2201@hotmail.co.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "py_ft4222_spi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
